@@ -18,18 +18,23 @@ DIST opera-9.01-20060728.1-static-qt.i386-en.tar.bz2 6690353 RMD160 62b95a06660c
 DIST opera-9.01-20060728.1-static-qt.ppc-en.tar.bz2 6748047 RMD160 d92d6e1798733c7e01e435cd71e618cfe2d718d1 SHA1 12b2204cd66bb6607d8ea7dd6ea08dde184235bf SHA256 b00bb06f566c51eb05e19c54744b28b72a7af3d609f9d5c78ecad57c8ee15549
 DIST opera-9.01-20060728.1-static-qt.sparc-en.tar.bz2 6653519 RMD160 438f754318ceaf9b198ab5fefa3de244adbaae4c SHA1 82cf4132ae52c282ca6a64fbc55b3f549681a7c0 SHA256 3f5c40d9f82a19e7501ce885da64dabcf5d2e4da6f3a5c31836b320c4b9bfc5d
 DIST opera-9.01-20060728.5-shared-qt.i386-en.tar.bz2 4885508 RMD160 b35368a181b0ee184c63d8e402cb3056e6f3a8fd SHA1 f0a1420f51b49308dce8e791afad8bdfd4c2bea3 SHA256 a0838d8f60be3f705f0e5badfa78a33ccb1b7eaf2a5db5d9e5cc98faba185a1d
+DIST opera-9.01-20060728.6-shared-qt.i386-en.tar.bz2 5152124 RMD160 09e0a8979ea90995a069f9b491548dfc70efc5ae SHA1 4b6a4300c7e14ff50f7d1dadb79b5dbd7762e932 SHA256 96be3c0324d13de3172595298db26eec6cd7e7775c2bff095b203c95e510a86d
 EBUILD opera-9.00.ebuild 4387 RMD160 23b8367432f0a068a0a022e5e4db5981d154133f SHA1 f483767f8ae175d18a3374a910b046247fef9265 SHA256 251a0e015d7b0f3bfb16e5188a2f4b0848b5b97b649e33ca5dd7f07c7bb64c5c
 MD5 427285a688bcc904312b8aea3a5212e6 opera-9.00.ebuild 4387
 RMD160 23b8367432f0a068a0a022e5e4db5981d154133f opera-9.00.ebuild 4387
 SHA256 251a0e015d7b0f3bfb16e5188a2f4b0848b5b97b649e33ca5dd7f07c7bb64c5c opera-9.00.ebuild 4387
+EBUILD opera-9.01-r1.ebuild 4488 RMD160 09ff5b2f4449b502ac8a92c62a187385121bec99 SHA1 eaf0c99ee85e40597e460e2961e0e537075e1487 SHA256 1179badfbe86948397f84ffb4f2ee23d2a96afeb14f1157874236942edc4915c
+MD5 42ed346ca4bab2200df40c3e9e0fddb4 opera-9.01-r1.ebuild 4488
+RMD160 09ff5b2f4449b502ac8a92c62a187385121bec99 opera-9.01-r1.ebuild 4488
+SHA256 1179badfbe86948397f84ffb4f2ee23d2a96afeb14f1157874236942edc4915c opera-9.01-r1.ebuild 4488
 EBUILD opera-9.01.ebuild 4433 RMD160 44ffd33b16689a82669c2114f76b66e95fc74e6c SHA1 47714dcefb0a238e7aef4e47784fae230cc24867 SHA256 359a3eccddfd40ff6d66ef0de4ffbe990c6b75b46dbd709a2f90c7ada988d996
 MD5 19371eec95870144a3c1bb6122d549d6 opera-9.01.ebuild 4433
 RMD160 44ffd33b16689a82669c2114f76b66e95fc74e6c opera-9.01.ebuild 4433
 SHA256 359a3eccddfd40ff6d66ef0de4ffbe990c6b75b46dbd709a2f90c7ada988d996 opera-9.01.ebuild 4433
-MISC ChangeLog 22193 RMD160 7d22ed5fe591f94c9c6bfb78a4898002627db9d9 SHA1 7565d2273a5ce82383edb72cd0e48593ca304975 SHA256 8462c90506beb7ec71bcc382f65e3bd306d29f7428c0366fc7060db563dc4580
-MD5 a43eb3f964765f8eb51285de982ad853 ChangeLog 22193
-RMD160 7d22ed5fe591f94c9c6bfb78a4898002627db9d9 ChangeLog 22193
-SHA256 8462c90506beb7ec71bcc382f65e3bd306d29f7428c0366fc7060db563dc4580 ChangeLog 22193
+MISC ChangeLog 22327 RMD160 e19af3f5642d260b55efe0691419bbef6e89bb33 SHA1 a8b5de0b000caafded9933579ba987d413dc1b35 SHA256 a414382d35e9bb01c28f4e1d88d237ad523a7d033504ed0b351f50cd581f703b
+MD5 d7fcbf9022cdc7e832b7afb6a6817206 ChangeLog 22327
+RMD160 e19af3f5642d260b55efe0691419bbef6e89bb33 ChangeLog 22327
+SHA256 a414382d35e9bb01c28f4e1d88d237ad523a7d033504ed0b351f50cd581f703b ChangeLog 22327
 MISC metadata.xml 220 RMD160 7ff7ad4c6e8d172bcfc712cdea261e851838129c SHA1 0718289f296f6229a8833cf44f48cc0f683b682b SHA256 4e10c895f4654efa60587dd3c2febe6c18471fbf752cde4a12fbe884b3cfa287
 MD5 db97f8b4a8ea79d4f2660a1fdb6d4a01 metadata.xml 220
 RMD160 7ff7ad4c6e8d172bcfc712cdea261e851838129c metadata.xml 220
@@ -40,3 +45,6 @@ SHA256 7e7e633fa5ad2d4d290fd73ac5b7db4a7de870af0a30fa7136241f1e56581753 files/di
 MD5 f513725b3361a948b14d1ffe03e5f106 files/digest-opera-9.01 1300
 RMD160 cb3e81ab682f2b781ff2c8b90e500dc2e83f330a files/digest-opera-9.01 1300
 SHA256 a6074855154b61d4264e4437e7dc51ae864dc5fbe6a439759ec8273ac67ad2ee files/digest-opera-9.01 1300
+MD5 fec11157753d55cbc2b0a614bd248e0f files/digest-opera-9.01-r1 1300
+RMD160 06b74937ad959bf3df05297a312dc6db6123a58f files/digest-opera-9.01-r1 1300
+SHA256 45feeac8f4ea191ac590b309300d8b1f1b2b81749d5180375da3f842af720840 files/digest-opera-9.01-r1 1300
