@@ -1,0 +1,12 @@
+MD5 3dad6ab16f0ccdbd728f3f531dd74e79 opera-9.01-20060728.1-static-qt.i386-en.tar.bz2 6690353
+RMD160 62b95a06660cbeb9e4b942b853c9e49206d263a5 opera-9.01-20060728.1-static-qt.i386-en.tar.bz2 6690353
+SHA256 38086051d09658d29b325370925219acd875a7cfe159fff98c08df8b674dc702 opera-9.01-20060728.1-static-qt.i386-en.tar.bz2 6690353
+MD5 9a9812d6552a375dfbc321bce73bded6 opera-9.01-20060728.1-static-qt.ppc-en.tar.bz2 6748047
+RMD160 d92d6e1798733c7e01e435cd71e618cfe2d718d1 opera-9.01-20060728.1-static-qt.ppc-en.tar.bz2 6748047
+SHA256 b00bb06f566c51eb05e19c54744b28b72a7af3d609f9d5c78ecad57c8ee15549 opera-9.01-20060728.1-static-qt.ppc-en.tar.bz2 6748047
+MD5 b3f570932d251cce723d2f41a8cd84a9 opera-9.01-20060728.1-static-qt.sparc-en.tar.bz2 6653519
+RMD160 438f754318ceaf9b198ab5fefa3de244adbaae4c opera-9.01-20060728.1-static-qt.sparc-en.tar.bz2 6653519
+SHA256 3f5c40d9f82a19e7501ce885da64dabcf5d2e4da6f3a5c31836b320c4b9bfc5d opera-9.01-20060728.1-static-qt.sparc-en.tar.bz2 6653519
+MD5 ddb25c6a50d7900556edf8785797f5a7 opera-9.01-20060728.6-shared-qt.i386-en.tar.bz2 5152124
+RMD160 09e0a8979ea90995a069f9b491548dfc70efc5ae opera-9.01-20060728.6-shared-qt.i386-en.tar.bz2 5152124
+SHA256 96be3c0324d13de3172595298db26eec6cd7e7775c2bff095b203c95e510a86d opera-9.01-20060728.6-shared-qt.i386-en.tar.bz2 5152124
