@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.58 2006/09/02 17:26:21 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.59 2006/09/02 18:22:06 jer Exp $
+
+*opera-9.01-r1 (02 Sep 2006)
+
+  02 Sep 2006; Jeroen Roovers <jer@gentoo.org> +opera-9.01-r1.ebuild:
+  Revision bump wrt bug #139407.
 
   02 Sep 2006; Jeroen Roovers <jer@gentoo.org>
   -files/opera-8.54-install.patch, -files/opera-9.00_pre2-install.patch,
